app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  padding: 0 1.5rem 0 0;
}

.react-multi-carousel-track {
  /* gap: 10px; */
}

.react-multi-carousel-item {
  padding: 0;
}

.react-multiple-carousel__arrow {
  background-color: black;
  width: 4.5rem;
  height: 4.5rem;
  top: 6rem;
  z-index: 9999;
}

.react-multiple-carousel__arrow::before {
  font-size: 2rem;
  font-weight: 900;
  background-color: transparent;
}

.react-multiple-carousel__arrow--right {
  right: 3px;
  /* z-index: 2; */
}

.react-multiple-carousel__arrow--left {
  left: 10px;
}

svg.star-svg {
  display: inline;
}

.checkmark-list-style {
  list-style-type: none;
  padding-left: 1rem;
}

.checkmark-list-style::before {
  content: "✓";
  color: #000;
  margin-right: 0.5rem;
}

.pulsating-circle {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translateX(-50%) translateY(-50%);
  width: 30px;
  height: 30px;
}

.pulsating-circle::before {
  content: "";
  position: relative;
  display: block;
  width: 300%;
  height: 300%;
  box-sizing: border-box;
  margin-left: -100%;
  margin-top: -100%;
  border-radius: 45px;
  background-color: #01a4e9;
  animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
}

.pulsating-circle::after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  display: block;
  width: 100%;
  height: 100%;
  background-color: white;
  border-radius: 15px;
  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
  animation: pulse-dot 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -0.4s infinite;
}

@keyframes pulse-ring {
  0% {
    transform: scale(0.33);
  }
  80%,
  100% {
    opacity: 0;
  }
}

@keyframes pulse-dot {
  0% {
    transform: scale(0.8);
  }
  50% {
    transform: scale(1);
  }
  100% {
    transform: scale(0.8);
  }
}

